<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameText"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/pCodeText"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:text="P. Code"/>

    <TextView
        android:id="@+id/gradeText"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grade"/>

    <TextView
        android:id="@+id/durationText"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duration"/>

    <TextView
        android:id="@+id/feeText"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fees"/>

</LinearLayout>