<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ViewGradesFragment">

    <LinearLayout
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name"/>

        <TextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="P. Code"/>

        <TextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/grade"/>

        <TextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/duration"/>

        <TextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/fees"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewGradesRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>