<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EnterGradesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter name" />

        <TextView
            android:id="@+id/programCodeText"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/programCode"
            android:textColor="@color/black" />

        <ListView
            android:id="@+id/programCodeListView"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/grade"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/gradeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Enter grade" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/durationEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter duration" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fees"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/feeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Enter fees" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="Submit" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>